--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,54 +1,40 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-
-<p>
-  <strong>Department:</strong>
-  <%= @user.department_id %>
-</p>
-
-<p>
-  <strong>Location:</strong>
-  <%= @user.location_id %>
-</p>
-
-<p>
-  <strong>Position:</strong>
-  <%= @user.position_id %>
-</p>
-
-<p>
-  <strong>Group:</strong>
-  <%= @user.group_id %>
-</p>
-
-<p>
-  <strong>Manager:</strong>
-  <%= @user.manager %>
-</p>
-
-<p>
-  <strong>Years with company:</strong>
-  <%= @user.years_with_company %>
-</p>
-
-<p>
-  <strong>Password digest:</strong>
-  <%= @user.password_digest %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<% provide(:title, @user.first_name + " " + @user.last_name) %>
+<div class = "row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.first_name + " " + @user.last_name %>
+        <p>
+            <%= @user.email %>
+        </p>
+      </h1>
+    </section>
+  </aside>
+  <div class="col-md-8">
+    <div class="col-md-4">
+      <strong>Manager:</strong>
+      <%= @user.manager %>
+    </div>
+    <div class="col-md-4">
+      <strong>Years with company:</strong>
+      <%= @user.years_with_company %>
+    </div>
+    <div class="col-md-4">
+      <strong>Position:</strong>
+      <%= @user.position.name %>
+    </div>
+    <div class="col-md-4">
+      <strong>Department:</strong>
+      <%= @user.department.name %>
+    </div>
+    <div class="col-md-4">
+      <strong>Group:</strong>
+      <%= @user.group.name %>
+    </div>
+    <div class="col-md-4">
+      <strong>Location:</strong>
+      <%= @user.location.name %>
+    </div>
+  </div>  
+</div>
