--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,7 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th>Request</th>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Start date</th>
+      <th>End date</th>
       <th>User</th>
       <th colspan="3"></th>
     </tr>
@@ -14,7 +17,10 @@
   <tbody>
     <% @projects.each do |project| %>
       <tr>
-        <td><%= project.request_id %></td>
+        <td><%= project.title %></td>
+        <td><%= project.description %></td>
+        <td><%= project.start_date %></td>
+        <td><%= project.end_date %></td>
         <td><%= project.user_id %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
