removed edit/destroy from projects and requests. Dispatch navigation not working

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -29,7 +29,8 @@
   </div>
   <div class="field">
     <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.collection_select :user_id, @user, :id, :first_name,
+                            :prompt => "Project Lead", class: 'form-control' %>
   </div>
   <div class="actions">
     <%= f.submit %>
