--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.label :open %><br>
     <%= f.check_box :open %>
   </div>
+  <div class="field">
+    <%=f.label :project_id , "Associated Project" %>
+    <%= f.collection_select :project_id, @project, :id, :name,
+                            :prompt => "Associated Project", class: 'form-control' %>
   <div class="actions">
     <%= f.submit %>
   </div>
