--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -9,6 +9,7 @@
       <th>Description</th>
       <th>Start date</th>
       <th>End date</th>
+      <th>Project Association</th>
       <th>Open</th>
       <th colspan="3"></th>
     </tr>
@@ -21,10 +22,11 @@
         <td><%= request.description %></td>
         <td><%= request.start_date %></td>
         <td><%= request.end_date %></td>
+        <td><%= request.project.name %></td>
         <td><%= request.open %></td>
         <td><%= link_to 'Show', request %></td>
-        <td><%= link_to 'Edit', edit_request_path(request) %></td>
-        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!--<td><%= link_to 'Edit', edit_request_path(request) %></td>
+        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
       </tr>
     <% end %>
   </tbody>
