--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -10,6 +10,9 @@
       <th>Start date</th>
       <th>End date</th>
       <th>Project Association</th>
+      <th>Location</th>
+      <th>Department</th>
+      <th>Group</th>
       <th>Open</th>
       <th colspan="3"></th>
     </tr>
@@ -23,6 +26,9 @@
         <td><%= request.start_date %></td>
         <td><%= request.end_date %></td>
         <td><%= request.project.name %></td>
+        <td><%= request.location.name %></td>
+        <td><%= request.department.name %></td>
+        <td><%= request.group.name %></td>
         <td><%= request.open %></td>
         <td><%= link_to 'Show', request %></td>
         <!--<td><%= link_to 'Edit', edit_request_path(request) %></td>
