--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @project.user.first_name %>
+  <%= @project.user.full_name %>
 </p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
