--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -14,6 +14,7 @@
       <th>Department</th>
       <th>Group</th>
       <th>Open</th>
+      <th>Created by</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,11 +26,12 @@
         <td><%= request.description %></td>
         <td><%= request.start_date %></td>
         <td><%= request.end_date %></td>
-        <td><%= request.project.name %></td>
-        <td><%= request.location.name %></td>
-        <td><%= request.department.name %></td>
-        <td><%= request.group.name %></td>
+        <td><%= request.project_id %></td>
+        <td><%= request.location_id %></td>
+        <td><%= request.department_id %></td>
+        <td><%= request.group_id %></td>
         <td><%= request.open %></td>
+        <td><%= request.user_id %></td>
         <td><%= link_to 'Show', request %></td>
         <!--<td><%= link_to 'Edit', edit_request_path(request) %></td>
         <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
