--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -31,7 +31,7 @@
         <td><%= request.department_id %></td>
         <td><%= request.group_id %></td>
         <td><%= request.open %></td>
-        <td><%= request.user_id %></td>
+        <td><%= request.user.full_name %></td>
         <td><%= link_to 'Show', request %></td>
         <!--<td><%= link_to 'Edit', edit_request_path(request) %></td>
         <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
