--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,9 @@
   <div class="container">
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Projects",    project_path %></li>
-        <li><%= link_to "Requests",    request_path %></li>
-        <li><%= link_to "Users",       user_path %></li>
+        <li><%= link_to "Projects",    projects_path %></li>
+        <li><%= link_to "Requests",    requests_path %></li>
+        <li><%= link_to "Users",       users_path %></li>
       </ul>
     </nav>
   </div>
