--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -33,8 +33,8 @@
         <td><%= request.open %></td>
         <td><%= request.user.full_name %></td>
         <td><%= link_to 'Show', request %></td>
-        <!--<td><%= link_to 'Edit', edit_request_path(request) %></td>
-        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
+        <td><%= link_to 'Edit', edit_request_path(request) %></td>
+        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
