--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -31,8 +31,8 @@
         <td><%= user.manager %></td>
         <td><%= user.years_with_company %></td>
         <td><%= link_to 'Show', user %></td>
-        <!--<td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
+        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
