--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,57 +1,71 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<% provide(:title, 'Sign up') %>
+<h1>Sign up</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+      <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
+      <div class="field">
+        <%= f.label :first_name %><br>
+        <%= f.text_field :first_name %>
+      </div>
+      <div class="field">
+        <%= f.label :last_name %><br>
+        <%= f.text_field :last_name %>
+      </div>
+      <div class="field">
+        <%= f.label :email %><br>
+        <%= f.text_field :email %>
+      </div>
+      <div class="field">
+        <%= f.label :manager %><br>
+        <%= f.text_field :manager %>
+      </div>
+      <div class="field">
+        <%= f.label :years_with_company %><br>
+        <%= f.number_field :years_with_company %>
+      </div>
+      <div class="field">
+        <%= f.label :department_id %><br>
+        <%= f.collection_select :department_id, @department, :id, :name,
+                                :prompt => "Your Department", class: 'form-control' %>
+      </div>
+      <div class="field">
+        <%= f.label :location_id %><br>
+        <%= f.collection_select :location_id, @location, :id, :name,
+                                :prompt => "Your Location", class: 'form-control' %>
+      </div>
+      <div class="field">
+        <%= f.label :position_id %><br>
+        <%= f.collection_select :position_id, @position, :id, :name,
+                                :prompt => "Your Position", class: 'form-control' %>
+      </div>
+      <div class="field">
+        <%= f.label :group_id %><br>
+        <%= f.collection_select :group_id, @group, :id, :name,
+                                :prompt => "Your Group", class: 'form-control' %>
+      </div>
+      <div class="field">
+        <%= f.label :password %>
+        <%= f.password_field :password, class: 'form-control' %>
+      </div>
+      <div class="field">
+        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
+      </div>
+      <div class="actions">
+        <%= f.submit %>
+      </div>
   </div>
-  <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :department_id %><br>
-    <%= f.collection_select :department_id, @department, :id, :name,
-                            :prompt => "Your Department", class: 'form-control' %>
-  </div>
-  <div class="field">
-    <%= f.label :location_id %><br>
-    <%= f.collection_select :location_id, @location, :id, :name,
-                            :prompt => "Your Location", class: 'form-control' %>
-  </div>
-  <div class="field">
-    <%= f.label :position_id %><br>
-    <%= f.collection_select :position_id, @position, :id, :name,
-                            :prompt => "Your Position", class: 'form-control' %>
-  </div>
-  <div class="field">
-    <%= f.label :group_id %><br>
-    <%= f.collection_select :group_id, @group, :id, :name,
-                            :prompt => "Your Group", class: 'form-control' %>
-  </div>
-  <div class="field">
-    <%= f.label :manager %><br>
-    <%= f.text_field :manager %>
-  </div>
-  <div class="field">
-    <%= f.label :years_with_company %><br>
-    <%= f.number_field :years_with_company %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+</div>
 <% end %>
