Display manager names, show and index for user views

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,7 +28,7 @@
         <td><%= user.location.name %></td>
         <td><%= user.position.name %></td>
         <td><%= user.group.name %></td>
-        <td><%= user.manager %></td>
+        <td><%= user.manager.full_name %></td>
         <td><%= user.years_with_company %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
