--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -64,6 +64,13 @@
         <%= f.label :password_confirmation, "Confirmation" %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
+      <div class="checkbox_field">
+        <% @skill.all.each do |skill| %>
+        <%= check_box_tag  "user[skill_ids[]]", skill.id %>
+          <%= skill.name %>
+        <% end %>
+      </div>
+    
       <div class="actions">
         <%= f.submit %>
       </div>
