--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -12,25 +12,25 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name %>*<br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :description %><br>
+    <%= f.label :description %>*<br>
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :start_date %><br>
+    <%= f.label :start_date %>*<br>
     <%= f.date_select :start_date %>
   </div>
   <div class="field">
-    <%= f.label :end_date %><br>
+    <%= f.label :end_date %>*<br>
     <%= f.date_select :end_date %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br>
+    <%= f.label :user_id %>*<br>
     <%= f.collection_select :user_id, @user, :id, :full_name,
-                            :prompt => "Project Lead", class: 'form-control' %>
+                            include_blank: '', class: 'form-control' %>
   </div>
   <div class="actions">
     <%= f.submit %>
