--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -2,43 +2,49 @@
 
 <h1>Listing Requests</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Project Association</th>
-      <th>Location</th>
-      <th>Department</th>
-      <th>Group</th>
-      <th>Open</th>
-      <th>Created by</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @requests.each do |request| %>
+<% if @requests.any? %>
+  <table>
+    <thead>
       <tr>
-        <td><%= request.name %></td>
-        <td><%= request.description %></td>
-        <td><%= request.start_date %></td>
-        <td><%= request.end_date %></td>
-        <td><%= request.project.name %></td>
-        <td><%= request.location.name%></td>
-        <td><%= request.department.name %></td>
-        <td><%= request.group.name %></td>
-        <td><%= request.open %></td>
-        <td><%= request.user.full_name %></td>
-        <td><%= link_to 'Show', request %></td>
-        <td><%= link_to 'Edit', edit_request_path(request) %></td>
-        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Start date</th>
+        <th>End date</th>
+        <th>Project Association</th>
+        <th>Location</th>
+        <th>Department</th>
+        <th>Group</th>
+        <th>Open</th>
+        <th>Created by</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @requests.each do |request| %>
+        <tr>
+          <td><%= request.name %></td>
+          <td><%= request.description %></td>
+          <td><%= request.start_date %></td>
+          <td><%= request.end_date %></td>
+          <td><%= request.project.name %></td>
+          <td><%= request.location.name%></td>
+          <td><%= request.department.name %></td>
+          <td><%= request.group.name %></td>
+          <td><%= request.open %></td>
+          <td><%= request.user.full_name %></td>
+          <td><%= link_to 'Show', request %></td>
+          <td><%= link_to 'Edit', edit_request_path(request) %></td>
+          <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <div class="center_text">
+    There are no active requests.
+  </div>
+<% end %>
 
 <br>
 
