--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -42,30 +42,32 @@
       <div class="field">
         <%= f.label :location_id %>*<br>
         <%= f.collection_select :location_id, @location, :id, :name,
-                                :prompt => "Your Location", class: 'form-control' %>
+                                include_blank: '',, class: 'form-control' %>
       </div>
       <div class="field">
         <%= f.label :position_id %>*<br>
         <%= f.collection_select :position_id, @position, :id, :name,
-                                :prompt => "Your Position", class: 'form-control' %>
+                                include_blank: '', class: 'form-control' %>
       </div>
       <div class="field">
         <%= f.label :group_id %>*<br>
         <%= f.collection_select :group_id, @group, :id, :name,
-                                :prompt => "Your Group", class: 'form-control' %>
+                                include_blank: '', class: 'form-control' %>
       </div>
       <label>Current Skills</label>
       <div class="checkbox_field">
         <% @skill.all.each do |skill| %>
-        <%= check_box_tag  "user[skill_ids][]", skill.id, @user.skill_ids.include?(skill.id) %>
-          <%= skill.name %><br>
+          <%= skill.name %> 
+          <%= check_box_tag  "user[skill_ids][]", skill.id, @user.skill_ids.include?(skill.id) %>
+          <br>
         <% end %>
-      </div>
+      </div><br>
       <label>Desired Skills</label>
       <div class="checkbox_field">
         <% @skill.all.each do |skill| %>
+          <%= skill.name %>  
           <%= check_box_tag "user[goal_ids][]", skill.id, @user.skill_ids.include?(skill.id) %>
-          <%= skill.name %><br>
+          <br>
         <% end %>
     
       <div class="actions">
