fixed error in syntax on show user

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -42,7 +42,7 @@
       <div class="field">
         <%= f.label :location_id %>*<br>
         <%= f.collection_select :location_id, @location, :id, :name,
-                                include_blank: '',, class: 'form-control' %>
+                                include_blank: '', class: 'form-control' %>
       </div>
       <div class="field">
         <%= f.label :position_id %>*<br>
