--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -14,19 +14,19 @@
       <% end %>
 
       <div class="field">
-        <%= f.label :name %>*<br>
+        <%= f.label :name, "Name*" %><br>
         <%= f.text_field :name %>
       </div>
       <div class="field">
-        <%= f.label :description %>*<br>
+        <%= f.label :description, "Description*" %><br>
         <%= f.text_area :description %>
       </div>
       <div class="field">
-        <%= f.label :start_date %>*<br>
+        <%= f.label :start_date, "Start Date*" %><br>
         <%= f.date_select :start_date %>
       </div>
       <div class="field">
-        <%= f.label :end_date %>*<br>
+        <%= f.label :end_date, "End Date*" %><br>
         <%= f.date_select :end_date %>
       </div>
       <div class="field">
