--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,24 +16,24 @@
       <% end %>
 
       <div class="field">
-        <%= f.label :first_name %>*<br>
+        <%= f.label :first_name, "First Name*" %><br>
         <%= f.text_field :first_name %>
       </div>
       <div class="field">
-        <%= f.label :last_name %>*<br>
+        <%= f.label :last_name, "Last Name*" %><br>
         <%= f.text_field :last_name %>
       </div>
       <div class="field">
-        <%= f.label :email %>*<br>
+        <%= f.label :email, "Email*" %><br>
         <%= f.text_field :email %>
       </div>
 
       <div class="field">
-        <%= f.label :password %>*
+        <%= f.label :password, "Password*" %>
         <%= f.password_field :password, class: 'form-control' %>
       </div>
       <div class="field">
-        <%= f.label :password_confirmation, "Confirmation" %>*
+        <%= f.label :password_confirmation, "Confirmation*" %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
    
