--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    
     <div class="container">
+      <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, class: name %>
+    <% end %>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
     </div>
