--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Users</h1>
 
 <table>
@@ -24,10 +22,34 @@
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= user.email %></td>
-        <td><%= user.department.name %></td>
-        <td><%= user.location.name %></td>
-        <td><%= user.position.name %></td>
-        <td><%= user.group.name %></td>
+        <td>
+          <% if user.department.nil? %>
+            Please update your profile.
+          <% else %>
+            <%= user.department.name %>
+          <% end %>
+        </td>
+        <td>
+          <% if user.department.nil? %>
+            Please update your profile.
+          <% else %>
+            <%= user.location.name %>
+          <% end %>
+        </td>
+        <td>
+          <% if user.department.nil? %>
+            Please update your profile.
+          <% else %>
+            <%= user.position.name %>
+          <% end %>
+        </td>
+        <td>
+          <% if user.department.nil? %>
+            Please update your profile.
+          <% else %>
+            <%= user.group.name %>
+          <% end %>
+        </td>
         <td>
           <% if user.manager.nil? %>
             No Manager
@@ -37,7 +59,11 @@
         </td>
         <td><%= user.years_with_company %></td>
         <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td>
+          <% if current_user?(user) %>
+            <%= link_to 'Edit', edit_user_path(user) %>
+          <% end %>
+        </td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
