--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,5 +54,7 @@
   </div>
 </div>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+  <% if current_user?(@user) %>
+    <%= link_to 'Edit', edit_user_path(@user) %> |
+  <% end %>
 <%= link_to 'Back', users_path %>
