--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -64,7 +64,10 @@
             <%= link_to 'Edit', edit_user_path(user) %>
           <% end %>
         </td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <% if current_user.admin? %>
+            <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
