Moved login check to application_controller, removed from individual controllers. Set destroy links to only display if admin

--- a/app/views/current_skills/index.html.erb
+++ b/app/views/current_skills/index.html.erb
@@ -18,7 +18,11 @@
         <td><%= current_skill.skill_id %></td>
         <td><%= link_to 'Show', current_skill %></td>
         <td><%= link_to 'Edit', edit_current_skill_path(current_skill) %></td>
-        <td><%= link_to 'Destroy', current_skill, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <% if current_user.admin? %>
+            <%= link_to 'Destroy', current_skill, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
