--- a/app/views/needed_skills/index.html.erb
+++ b/app/views/needed_skills/index.html.erb
@@ -16,7 +16,11 @@
         <td><%= needed_skill.skill_id %></td>
         <td><%= link_to 'Show', needed_skill %></td>
         <td><%= link_to 'Edit', edit_needed_skill_path(needed_skill) %></td>
-        <td><%= link_to 'Destroy', needed_skill, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <% if current_user.admin? %>
+            <%= link_to 'Destroy', needed_skill, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
