--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -16,7 +16,11 @@
         <td><%= position.name %></td>
         <td><%= link_to 'Show', position %></td>
         <td><%= link_to 'Edit', edit_position_path(position) %></td>
-        <td><%= link_to 'Destroy', position, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <% if current_user.admin? %>
+            <%= link_to 'Destroy', position, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
