--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -18,7 +18,11 @@
         <td><%= response.request_id %></td>
         <td><%= link_to 'Show', response %></td>
         <td><%= link_to 'Edit', edit_response_path(response) %></td>
-        <td><%= link_to 'Destroy', response, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <% if current_user.admin? %>
+            <%= link_to 'Destroy', response, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% end %> 
+        </td>
       </tr>
     <% end %>
   </tbody>
