--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -16,7 +16,11 @@
         <td><%= skill.name %></td>
         <td><%= link_to 'Show', skill %></td>
         <td><%= link_to 'Edit', edit_skill_path(skill) %></td>
-        <td><%= link_to 'Destroy', skill, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <% if current_user.admin? %>
+            <%= link_to 'Destroy', skill, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
