--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -36,7 +36,7 @@
           <td><%= link_to 'Show', request %></td>
           <td><%= link_to 'Edit', edit_request_path(request) %></td>
           <td>
-            <% if current_user.admin? %>
+            <% if current_user.admin? || owner_of?(request) %>
               <%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %>
             <% end %>
           </td>
