--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -29,8 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :user_id %>*<br>
-    <%= f.collection_select :user_id, @user, :id, :full_name,
-                            include_blank: '', class: 'form-control' %>
+    <%= f.collection_select :user_id, @users, :id, :full_name, class: 'form-control' %>
   </div>
   <div class="actions">
     <%= f.submit %>
