Modified pluralization of variables in controller, and in corresponding views. Removed extra flash notice locations. Added css for alert-notice (still fairly ugly)

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -220,3 +220,10 @@ input[type=checkbox]{
   text-align: center;
   font-size: 1.2em;
 }
+
+.alert-notice 
+{
+  background-color: #89F681;
+  border-color: #04B431;
+  color: green;
+}
