--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -35,23 +35,23 @@
       </div>
       <div class="field">
         <%=f.label :project_id , "Associated Project*" %>
-        <%= f.collection_select :project_id, @project, :id, :name,
+        <%= f.collection_select :project_id, @projects, :id, :name,
                                 include_blank: '', class: 'form-control' %>
       <div class="field">
         <%=f.label :location_id , "Location*" %>
-        <%= f.collection_select :location_id, @location, :id, :name,
+        <%= f.collection_select :location_id, @locations, :id, :name,
                                 include_blank: '', class: 'form-control' %>
       <div class="field">
           <%=f.label :department_id , "Department*" %>
-          <%= f.collection_select :department_id, @department, :id, :name,
+          <%= f.collection_select :department_id, @departments, :id, :name,
                                   include_blank: '', class: 'form-control' %>
       <div class="field">
         <%=f.label :group_id , "Group*" %>
-        <%= f.collection_select :group_id, @group, :id, :name,
+        <%= f.collection_select :group_id, @groups, :id, :name,
                                 include_blank: '', class: 'form-control' %>
       <div class="field">
         <%=f.label :user_id , "User Making Request*" %>
-        <%= f.collection_select :user_id, @user, :id, :full_name,
+        <%= f.collection_select :user_id, @users, :id, :full_name,
                                 include_blank: '', class: 'form-control' %>
       <div class="actions">
         <%= f.submit %>
