--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -33,6 +33,7 @@
           <td><%= request.user.full_name %></td>
           <td><%= link_to 'Show', request %></td>
           <td><%= link_to 'Edit', edit_request_path(request) %></td>
+          <td><%= link_to 'Show Interest', new_request_response_path(request) %></td>
           <td>
             <% if current_user.admin? || owner_of?(request) %>
               <%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %>
