--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@response) do |f| %>
+<%= form_for [@request, @response] do |f| %>
   <% if @response.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@response.errors.count, "error") %> prohibited this response from being saved:</h2>
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.label :comment, "Additional Comments" %><br> 
+    <%= f.text_area :comment%>
   </div>
   <div class="field">
-    <%= f.label :request_id %><br>
-    <%= f.number_field :request_id %>
+    <%= f.hidden_field :request_id %>
   </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
